Tue Jun 24 20:00:45 BST 2003  Tony Gale <gale@gtk.org>

	* docs/faq/gtk-faq.sgml: Thread support updates
	from Owen. Various suggestions from Steve Chaplin.

2003-03-24  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Updated Indonesian translation

2003-06-21  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): When
	emulating X11's automatic grab on button down, pass owner_events
	as FALSE. According to the XLib spec, automatic grabs use True for
	owner_events when OwnerGrabButtonMask is selected, and I don't see
	the X11 backend doing that. (#82497, #91619, #92835, #107322, #110271)
	(find_window_for_pointer_event): Improve debugging output.

2003-06-17  Tor Lillqvist  <tml@iki.fi>

	* gtk-zip.sh.in (DLLDIR): Look for DLLs also in the bin
	subdirectory, where libtool 1.5 installs them.

	* README.win32: Point to FSF's binary Win32 distribution of
	gettext-runtime.

2003-06-17  Matthias Clasen  <maclas@gmx.de>

	* acinclude.m4 (JH_PATH_XML_CATALOG, JH_CHECK_XML_CATALOG): New
	macros to check for XML catalog contents and path, borrowed from
	gtk-doc. 
	* configure.in: New option --enable-man to enable regeneration of
	man pages from Docbook, if the necessary tools are found.

2003-06-15  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_class_init): 
	* gtk/gtknotebook.c (gtk_notebook_class_init): 
	* gtk/gtkalignment.c (gtk_alignment_class_init): 
	* gtk/gtkpaned.c (gtk_paned_class_init): Document new properties
	as 2.4 additions.

	* gtk/gtkwidget.c (gtk_widget_class_init): Move inline signal docs 
	to the proper place, immediately before the g_signal_new() call.

	* gtk/gtktextiter.h: Make the flags-nature of GtkTextSearchFlags 
	more obvious.  (#115122, Jeff Franks)

2003-06-12  Anders Carlsson  <andersca@codefactory.se>

	* gtk/gtkwidget.c: (event_window_is_still_viewable):
	Special case pixmaps. (#114880)
	
2003-06-12  Matthias Clasen  <maclas@gmx.de>
